# placeboDemo

./: .gitignore  CMakeLists.txt
TestFiles/: common.h  config_demos.h  glfwWindow.cpp  glfwWindow.h  oldmain.cpp  os.h  pl_clock.h  pl_thread.h  videoFilter.cpp  videoFilter.h
head/: MyGL.h  OptionPb.h  config_demos.h  defines.h  pl_clock.h  pl_thread.h  videoFilter.h
src/: MyGL.cpp  OptionPb.cpp  filterTest.cpp  main.cpp  test.c  videoFilter.cpp
